--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,7 @@
         "variant": "cpp",
         "any": "cpp",
         "forward_list": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "osal.h": "c"
     }
 }
